| Summary: | ASTERISK-24944: main/audiohook.c change prevents G722 call recording | ||||||||
| Reporter: | Ronald Raikes (reraikes) | Labels: | |||||||
| Date Opened: | 2015-04-06 14:08:06 | Date Closed: | 2015-05-21 07:23:24 | ||||||
| Priority: | Minor | Regression? | Yes | ||||||
| Status: | Closed/Complete | Components: | Core/General | ||||||
| Versions: | 11.17.0 | Frequency of Occurrence | Constant | ||||||
| Related Issues: |
| ||||||||
| Environment: | Attachments: | ( 0) issue_24944_full_log.txt | |||||||
| Description: | The 2015-03-12 12:57 +0000 [r432807-432810] (https://reviewboard.asterisk.org/r/4475/) change to main/audiohook.c prevents call recording from extensions configured for G722. A .wav file with a 44 byte RIFF header is created, but no audio is recorded.
Replacing the audiohook.c file in 11.17.0 with the one from 11.16.0 and recompiling corrects the problem. | ||||||||
| Comments: | By: Matt Jordan (mjordan) 2015-04-07 17:06:38.536-0500 We require additional debug to continue with triage of your issue. Please follow the instructions on the wiki [1] for how to collect debugging information from Asterisk. For expediency, where possible, attach the debug with a '.txt' file extension so that the debug will be usable for further analysis. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Ronald Raikes (reraikes) 2015-04-07 17:52:29.216-0500 issue_24944_full_log as requested By: Ronald Raikes (reraikes) 2015-04-14 01:46:49.188-0500 Did this fall through the cracks? By: Joshua C. Colp (jcolp) 2015-04-14 05:23:47.160-0500 No, [~rnewton] has not yet triaged it. By: Rusty Newton (rnewton) 2015-04-14 15:04:06.961-0500 [~reraikes] as long as the status says Triage and the Assignee is unassigned, that means your issue is waiting to be triaged. As soon as we get to it then you will see updates on the issue. :) Thanks for your patience! By: Rusty Newton (rnewton) 2015-04-30 18:22:11.369-0500 Sorry it took me a bit to get to this. I'm able to reproduce the issue as you described. Thanks for the report! | ||||||||