audiohook.c: Difference in read/write rates caused continuous buffer resets

Currently, everytime a sample rate change occurs (on read or write) the
associated factory buffers are reset. If the requested sample rate on a
read differed from that of a write then the buffers are continually reset
on every read and write. This has the side effect of emptying the buffer,
thus there being no data to read and then write to a file in the case of
call recording.

This patch fixes it so that on a write, and before translation, the internal
sample rates are checked and updated accordingly if the rate happened to have
changed on a read. This also enforces that the internal rate stays in sync,
favoring a higher rate, despite any difference in read/write rates.

ASTERISK-24944 #close

Change-Id: Idab4dfef068a7922c09cc631dda27bc920a6c76f